--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.3",
+    "@ramonak/react-progress-bar": "^4.4.0",
     "next": "12.1.0",
     "parse": "^3.4.1",
     "react": "17.0.2",
