--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "parse": "^3.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "styled-components": "^5.3.5",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
