Logic for filling database

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "kagenet",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
+    "add": "node ./data/fillDatabase.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
